--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
         <td>Enrolment modes:</td>
-        <td>Trimester 2: Burwood (Melbourne), Geelong, Cloud (online).</td>
+        <td>Trimester 2: Burwood (Melbourne), Geelong, Cloud (online)</td>
         </tr>
         <tr>
         <td>Credit point(s):</td>
