--- a/news.html
+++ b/news.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News and Media Releases</title>
-    <link rel="stylesheet" href="css/news.css">      
+    <link rel="stylesheet" href="css/news.css">
 </head>
 
 <body>
     <header>
         <div class="header-container">
+            <img src="logo.svg" alt="Deakin University Logo" style="float: left; height: 50px;">
+            <!-- Logo added here -->
             <h1>Deakin University</h1>
             <nav>
                 <ul>
@@ -25,7 +29,8 @@
     </header>
     <main>
         <section class="news-section">
-            <rssapp-wall id="yQxYvhKZIafushUf"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+            <rssapp-wall id="yQxYvhKZIafushUf"></rssapp-wall>
+            <script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
         </section>
     </main>
 
@@ -35,5 +40,5 @@
         </div>
     </footer>
 </body>
+
 </html>
-    
