add logo and adjust UI'

--- a/activities.html
+++ b/activities.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News and Media Releases</title>
-    <link rel="stylesheet" href="css/news.css">      
+    <link rel="stylesheet" href="css/news.css">
+    <style>
+        .header-container h1 {
+            margin-left: -700px;
+            font-size: 40px;
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <div class="header-container">
+            <img src="logo.svg" alt="Deakin University Logo" style="float: left; height: 80px;">
             <h1>Deakin University</h1>
             <nav>
                 <ul>
@@ -25,7 +33,9 @@
     </header>
     <main>
         <section class="news-section">
-            <rssapp-wall id="bcFje4wREHt8GaOD"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>        </section>
+            <rssapp-wall id="bcFje4wREHt8GaOD"></rssapp-wall>
+            <script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+        </section>
     </main>
 
     <footer>
@@ -34,5 +44,5 @@
         </div>
     </footer>
 </body>
+
 </html>
-    
