--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,7 +65,7 @@
             background-color: #fff;
             width: 300px;
             margin: 100px auto;
-            padding: 20px;
+            padding: 40px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
         }
@@ -126,10 +127,17 @@
         .forgot-password a:hover {
             text-decoration: underline;
         }
+
+        .header-container h1 {
+            margin-left: -235px;
+            font-size: 40px;
+        }
     </style>
 </head>
+
 <body>
     <header class="header-container">
+        <img src="logo.svg" alt="Deakin University Logo" style="float: left; height: 80px;">
         <h1>Deakin University</h1>
         <nav>
             <ul>
@@ -171,4 +179,5 @@
         <p>&copy; 2024 Deakin University. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
