--- a/news.html
+++ b/news.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News and Media Releases</title>
     <link rel="stylesheet" href="css/news.css">
+    <style>
+        .header-container h1 {
+            margin-left: -700px;
+            font-size: 40px;
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <div class="header-container">
-            <img src="logo.svg" alt="Deakin University Logo" style="float: left; height: 50px;">
-            <!-- Logo added here -->
+            <img src="logo.svg" alt="Deakin University Logo" style="float: left; height: 80px;">
             <h1>Deakin University</h1>
             <nav>
                 <ul>
